name:                mega-adder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/8BitMate/mega-adder#readme
license:             BSD3
license-file:        LICENSE
author:              Asbjørn Gaarde
maintainer:          asbjorn_gaarde@hotmail.com
copyright:           2018 Asbjørn Gaarde
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mega-adder
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
